chore: update package.json

--- a/package.json
+++ b/package.json
@@ -1,79 +1,103 @@
 {
-  "name": "root",
-  "version": "0.4.0",
+  "name": "universal-fhevm-sdk",
+  "version": "1.0.0",
+  "description": "Universal FHEVM SDK - Framework-agnostic encryption library with multi-framework examples",
   "private": true,
-  "license": "BSD-3-Clause-Clear",
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "scripts": {
-    "chain": "pnpm hardhat:chain",
-    "compile": "pnpm hardhat:compile",
-    "deploy:localhost": "pnpm hardhat:deploy && pnpm generate",
-    "deploy:sepolia": "pnpm hardhat:deploy:sepolia && pnpm generate",
-    "fork": "pnpm hardhat:fork",
-    "format": "pnpm next:format && pnpm hardhat:format",
-    "sdk:build": "pnpm --filter ./packages/fhevm-sdk build",
-    "sdk:watch": "pnpm --filter ./packages/fhevm-sdk watch",
-    "sdk:test": "pnpm --filter ./packages/fhevm-sdk test",
-    "sdk:test:watch": "pnpm --filter ./packages/fhevm-sdk test:watch",
-    "sdk:clean": "pnpm --filter ./packages/fhevm-sdk clean",
-    "generate": "ts-node ./scripts/generateTsAbis.ts",
-    "hardhat:chain": "pnpm --filter ./packages/hardhat chain",
-    "hardhat:check-types": "pnpm --filter ./packages/hardhat check-types",
-    "hardhat:clean": "pnpm --filter ./packages/hardhat clean",
-    "hardhat:compile": "pnpm --filter ./packages/hardhat compile",
-    "hardhat:deploy": "pnpm --filter ./packages/hardhat deploy:localhost",
-    "hardhat:deploy:sepolia": "pnpm --filter ./packages/hardhat deploy:sepolia",
-    "hardhat:format": "pnpm --filter ./packages/hardhat prettier:write",
-    "hardhat:generate": "pnpm --filter ./packages/hardhat typechain",
-    "hardhat:hardhat-verify": "pnpm --filter ./packages/hardhat verify",
-    "hardhat:lint": "pnpm --filter ./packages/hardhat lint",
-    "hardhat:lint-staged": "pnpm --filter ./packages/hardhat lint",
-    "hardhat:test": "pnpm --filter ./packages/hardhat test",
-    "hardhat:verify": "pnpm --filter ./packages/hardhat verify",
-    "hardhat:verify:sepolia": "pnpm --filter ./packages/hardhat verify:sepolia",
-    "lint": "pnpm next:lint && pnpm hardhat:lint",
-    "next:build": "pnpm --filter ./packages/nextjs build",
-    "next:check-types": "pnpm --filter ./packages/nextjs check-types",
-    "next:format": "pnpm --filter ./packages/nextjs format",
-    "next:lint": "pnpm --filter ./packages/nextjs lint",
-    "next:serve": "pnpm --filter ./packages/nextjs serve",
-    "precommit": "lint-staged",
-    "preinstall": "pnpm sdk:build",
-    "start": "pnpm --filter ./packages/nextjs dev",
-    "test": "pnpm hardhat:test",
-    "vercel": "pnpm --filter ./packages/nextjs vercel",
-    "vercel:login": "pnpm --filter ./packages/nextjs vercel:login",
-    "vercel:yolo": "pnpm --filter ./packages/nextjs vercel:yolo",
-    "verify": "pnpm hardhat:verify",
-    "verify:sepolia": "pnpm hardhat:verify:sepolia"
+    "build:sdk": "npm run build --workspace=packages/fhevm-sdk",
+    "dev:nextjs": "npm run dev --workspace=examples/nextjs",
+    "dev:react": "npm run dev --workspace=examples/react",
+    "build:nextjs": "npm run build --workspace=examples/nextjs",
+    "build:react": "npm run build --workspace=examples/react",
+    "install:all": "npm install && npm run build:sdk",
+    "compile": "hardhat compile",
+    "clean": "hardhat clean",
+    "test": "hardhat test",
+    "test:coverage": "hardhat coverage",
+    "test:gas": "REPORT_GAS=true hardhat test",
+    "deploy": "hardhat run scripts/deploy.js --network sepolia",
+    "deploy:local": "hardhat run scripts/deploy.js --network localhost",
+    "deploy:zama": "hardhat run scripts/deploy.js --network zama",
+    "verify": "node scripts/verify.js",
+    "interact": "node scripts/interact.js",
+    "simulate": "node scripts/simulate.js",
+    "node": "hardhat node",
+    "accounts": "hardhat accounts",
+    "balance": "hardhat balance",
+    "contract-info": "hardhat contract-info",
+    "lint": "npm run lint:sol && npm run lint:js",
+    "lint:sol": "solhint 'contracts/**/*.sol'",
+    "lint:js": "eslint '**/*.js'",
+    "lint:fix": "npm run lint:sol:fix && npm run lint:js:fix",
+    "lint:sol:fix": "solhint 'contracts/**/*.sol' --fix",
+    "lint:js:fix": "eslint '**/*.js' --fix",
+    "format": "prettier --write '**/*.{js,json,sol,md}'",
+    "format:check": "prettier --check '**/*.{js,json,sol,md}'",
+    "security": "npm run security:audit && npm run security:slither",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:fix": "npm audit fix",
+    "security:slither": "slither . --filter-paths 'node_modules' --exclude naming-convention,solc-version || true",
+    "security:mythril": "myth analyze contracts/*.sol || true",
+    "security:check-updates": "npm outdated",
+    "performance": "npm run test:gas && npm run size-check",
+    "size-check": "hardhat size-contracts",
+    "analyze": "npm run security && npm run performance",
+    "prepare": "husky install",
+    "pre-commit": "npm run lint && npm run format:check && npm test",
+    "validate": "npm run compile && npm run lint && npm test && npm run security"
+  },
+  "keywords": [
+    "fhevm",
+    "fhe",
+    "sdk",
+    "encryption",
+    "privacy",
+    "blockchain",
+    "react",
+    "nextjs",
+    "typescript",
+    "zama",
+    "universal-sdk"
+  ],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@openzeppelin/hardhat-upgrades": "^2.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-security": "^2.1.0",
+    "hardhat": "^2.19.0",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.10",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solhint": "^4.1.1",
+    "solhint-plugin-prettier": "^0.1.0",
+    "solidity-coverage": "^0.8.5"
   },
   "dependencies": {
-    "hardhat-deploy": "^0.11.45"
+    "dotenv": "^16.3.1",
+    "fhevmjs": "^0.6.2"
   },
-  "devDependencies": {
-    "@types/node": "^22.7.5",
-    "prettier": "^3.6.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "bufferutil",
-      "esbuild",
-      "keccak",
-      "protobufjs",
-      "secp256k1",
-      "sharp",
-      "unrs-resolver",
-      "utf-8-validate",
-      "yarn"
+  "lint-staged": {
+    "*.sol": [
+      "solhint --fix",
+      "prettier --write"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
     ]
   }
 }
+
